--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "notomato/li3_paginate",
+    "name": "notomato/li3_mailer",
     "description": "Lithium mailer",
     "authors": [
     ],
